fix: add gap for .form-button

--- a/practice/src/css/components/form.css
+++ b/practice/src/css/components/form.css
@@ -40,7 +40,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  gap: 8px;
+  padding-top: 70px;
 }
 
 .btn-confirm {
@@ -66,5 +66,12 @@
   .btn-confirm {
     padding-left: 67px;
     padding-right: 67px;
+  }
+}
+
+/* Desktop */
+@media (min-width: 1352px) {
+  .form-button {
+    gap: 95px;
   }
 }
